WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189188
REGRESSION(
r235484
) _WKPreferencesGetWebRTCLegacyAPIEnabled symbol not found when running Safari with external SDK build
https://bugs.webkit.org/show_bug.cgi?id=189188
Summary
REGRESSION(r235484) _WKPreferencesGetWebRTCLegacyAPIEnabled symbol not found ...
Frédéric Wang (:fredw)
Reported
2018-08-31 01:43:02 PDT
After the change in
bug 189040
, I can no longer run Safari (iOS or macOS) using the external SDK: $ Tools/Scripts/run-safari Starting SafariForWebKitDevelopment with DYLD_FRAMEWORK_PATH set to point to built WebKit in /Users/fred/WebKit/WebKitBuild//Debug. dyld: Symbol not found: _WKPreferencesGetWebRTCLegacyAPIEnabled Referenced from: /System/Library/PrivateFrameworks/Safari.framework/Versions/A/Safari Expected in: /Users/fred/WebKit/WebKitBuild/Debug/WebKit.framework/Versions/A/WebKit in /System/Library/PrivateFrameworks/Safari.framework/Versions/A/Safari
Attachments
Patch
(3.02 KB, patch)
2018-08-31 02:38 PDT
,
Frédéric Wang (:fredw)
no flags
Details
Formatted Diff
Diff
Patch
(5.34 KB, patch)
2018-08-31 07:00 PDT
,
Frédéric Wang (:fredw)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Frédéric Wang (:fredw)
Comment 1
2018-08-31 02:38:39 PDT
Created
attachment 348624
[details]
Patch
Frédéric Wang (:fredw)
Comment 2
2018-08-31 07:00:39 PDT
Created
attachment 348637
[details]
Patch
youenn fablet
Comment 3
2018-08-31 08:22:21 PDT
Comment on
attachment 348637
[details]
Patch Thanks!
WebKit Commit Bot
Comment 4
2018-08-31 08:52:56 PDT
Comment on
attachment 348637
[details]
Patch Clearing flags on attachment: 348637 Committed
r235553
: <
https://trac.webkit.org/changeset/235553
>
WebKit Commit Bot
Comment 5
2018-08-31 08:52:57 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-08-31 08:53:32 PDT
<
rdar://problem/43941821
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug