Source/WebKit/UIProcess/API/Cocoa/WKPreferences.mm
@@ -669,6 +669,15 @@ static _WKStorageBlockingPolicy toAPI(WebCore::SecurityOrigin::StorageBlockingPo
     _preferences->setICECandidateFilteringEnabled(enabled);
 }
 
+- (BOOL)_webRTCLegacyAPIEnabled
+{
+    return NO;
+}
+
+- (void)_setWebRTCLegacyAPIEnabled:(BOOL)enabled
+{
+}
+
 - (void)_setJavaScriptCanAccessClipboard:(BOOL)javaScriptCanAccessClipboard
 {
     _preferences->setJavaScriptCanAccessClipboard(javaScriptCanAccessClipboard);
